MB-4889: Don't notify tap when shutting down

On shutdown we delete the tapconnmap and tap connections before
stopping the dispatcher threads. In this particular case the
nio-dispatcher thread was notifying tap during shutdown. This fix
causes us to check for shutdown before notifying tap.

Change-Id: Ic2db36d8940c3682a887f806cb5a8f2244d04886
Reviewed-on: http://review.couchbase.org/14320
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>